objects/SalesAgreement.object
<CustomObject>
    <fields>
        <fullName>PMC_AccountSegmentation__c</fullName>
        <formula>TEXT( Account.PMC_SS_Segmentation__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Segmentation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CLM_AgreementDocumentStatus__c</fullName>
        <label>Agreement Document Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Signatures</fullName>
                </value>
                <value>
                    <fullName>Partially Signed</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CLM_AmendmentNumber__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amendment Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CLM_SalesAgreementAutoNumber__c</fullName>
        <displayFormat>A-{0000000}</displayFormat>
        <externalId>true</externalId>
        <label>Sales Agreement Auto Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>PMC_CLM_isAmendment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be used for the backend purpose of indicating that the sales agreement has been created as a product of the amendment flow, and used in CLM to control visibility of fields in the intake form and in the workflow</description>
        <label>isAmendment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_SS_AgreementType__c</fullName>
        <description>States the Agreement Type</description>
        <label>Agreement Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Annual Sales Agreement</fullName>
                </value>
                <value>
                    <fullName>Business Partner Agreement</fullName>
                </value>
                <value>
                    <fullName>Ex-Space Agreement</fullName>
                </value>
                <value>
                    <fullName>Master Sales Agreement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_AmendedReason__c</fullName>
        <description>Reason for Amending Sales Agreement</description>
        <label>Amended Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Changes in Circumstance</fullName>
                </value>
                <value>
                    <fullName>Changes to Terms</fullName>
                </value>
                <value>
                    <fullName>Dispute</fullName>
                </value>
                <value>
                    <fullName>Error Correction</fullName>
                </value>
                <value>
                    <fullName>New Product Interests</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_ApprovalStatus__c</fullName>
        <description>Field to track the approval status of the Sales Agreement.</description>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Submitted</fullName>
                    <default>true</default>
                    <label>Not Submitted</label>
                </value>
                <value>
                    <fullName>Under Revision</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_CalculateActualValuesUsingDPE__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field indicates the Actuals should be calculated using DPE from Invoice Items</description>
        <label>Calculate Actual Values Using DPE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_SS_PreviousStatus__c</fullName>
        <description>Contains the Previous Status</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Previous Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_Pricing__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Pricing</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PMC_SS_SalesAgreementExternalId__c</fullName>
        <description>This field states the Sales Agreement External Id</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Sales Agreement External Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_TotalExSpaceIncentives__c</fullName>
        <description>This field states total accumulation of all ex-space incentives</description>
        <label>Total Ex-Space Incentives</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_SS_TotalGrowthIncentives__c</fullName>
        <description>This field states total accumulation of all growth incentives</description>
        <label>Total Growth Incentives</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_SS_TotalPotentialIncentives__c</fullName>
        <description>This field states total accumulation of all incentives</description>
        <label>Total Potential Incentives</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_SS_TotalVolumeIncentives__c</fullName>
        <description>This field states total accumulation of all volume incentives</description>
        <label>Total Volume Incentives</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_SS_UnitofMeasure__c</fullName>
        <description>Unit of Measure involved in Sales Agreement</description>
        <label>Unit of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PMC_SS_UnitOfMeasure</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SkipDocuSignProcess__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifier to Skip DocuSign Document Generation for Sales Agreement</description>
        <inlineHelpText>Check this field if Sales Agreement doesn&apos;t need Rebate Programs and Document Generation for Activation</inlineHelpText>
        <label>Skip DocuSign Process</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>All_SalesAgreements</fullName>
        <columns>Name</columns>
        <columns>Owner</columns>
        <columns>Account</columns>
        <columns>Status</columns>
        <columns>StartDate</columns>
        <columns>EndDate</columns>
        <columns>CreatedDate</columns>
        <columns>ScheduleFrequency</columns>
        <columns>RecordType</columns>
        <filterScope>Everything</filterScope>
        <label>All Sales Agreements</label>
    </listViews>
    <listViews>
        <fullName>My_SalesAgreements</fullName>
        <columns>Name</columns>
        <columns>Owner</columns>
        <columns>Account</columns>
        <columns>Status</columns>
        <columns>StartDate</columns>
        <columns>EndDate</columns>
        <filterScope>Mine</filterScope>
        <label>My Sales Agreements</label>
    </listViews>
    <listViews>
        <fullName>PMC_SS_SalesAgreementApprovals_SalesAgreement</fullName>
        <filterScope>Queue</filterScope>
        <label>Sales Agreement Approvals</label>
        <queue>PMC_SS_SalesAgreementApprovals</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>PMC_SS_AnnualSalesAgreement</fullName>
        <active>true</active>
        <description>South America Sales Agreement</description>
        <label>Annual Sales Agreement</label>
    </recordTypes>
    <recordTypes>
        <fullName>PMC_SS_BusinessPartnerAgreement</fullName>
        <active>true</active>
        <description>North America Business Partner Agreement</description>
        <label>Business Partner Agreement</label>
    </recordTypes>
    <recordTypes>
        <fullName>PMC_SS_IndustrialLongTermAgreement</fullName>
        <active>true</active>
        <description>Industrial Long-Term Agreement</description>
        <label>Industrial Long-Term Agreement</label>
    </recordTypes>
    <recordTypes>
        <fullName>PMC_SS_InternationalLongTermAgreement</fullName>
        <active>true</active>
        <description>International Long-Term Agreement</description>
        <label>International Long-Term Agreement</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>PMC_SS_RestrictSalesAgmtEditWhenArchived</fullName>
        <active>true</active>
        <description>Restrict Edit or Update of Sales Agreement when the Status is Archived.</description>
        <errorConditionFormula>AND(
NOT( $Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c ) ,
ISPICKVAL(  PRIORVALUE(Status) , &apos;Archived&apos;)  
)</errorConditionFormula>
        <errorMessage>Archived Sales Agreement cannot be updated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PMC_SS_RestrictSalesAgreementEdit</fullName>
        <active>true</active>
        <description>Prevents user from editing a Sales Agreement if it is Under Revision or Approved.</description>
        <errorConditionFormula>AND(
NOT( $Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c ) ,
OR( ISCHANGED(OwnerId),
ISCHANGED(Name),
ISCHANGED(StartDate),
ISCHANGED(AccountId),
ISCHANGED(ScheduleFrequency),
ISCHANGED(ScheduleCount),
ISCHANGED(CurrencyIsoCode),
ISCHANGED(EndDate),
ISCHANGED(ProductLevel),
ISCHANGED(Description),
ISCHANGED(ActualsCalculationMode),
ISCHANGED(PMC_SS_UnitofMeasure__c),
ISCHANGED(PMC_SS_AgreementType__c),
ISCHANGED(PMC_SS_Pricing__c),
ISCHANGED(PMC_SS_TotalPotentialIncentives__c),
ISCHANGED(PMC_SS_TotalGrowthIncentives__c),
ISCHANGED(PMC_SS_TotalExSpaceIncentives__c),
ISCHANGED(PMC_SS_TotalVolumeIncentives__c),
ISCHANGED(PMC_SS_PreviousStatus__c  ),
ISCHANGED(PMC_SS_AgreementType__c ),
ISCHANGED(PMC_SS_SalesAgreementExternalId__c )
),
NOT(OR(ISPICKVAL(PMC_SS_ApprovalStatus__c,&apos;Not Submitted&apos;), ISPICKVAL(PMC_SS_ApprovalStatus__c,&apos;Denied&apos;)))
)</errorConditionFormula>
        <errorDisplayField>AccountId</errorDisplayField>
        <errorMessage>This Sales Agreement can’t be edited at this stage. Please reach out to your Salesforce Administrator for assistance.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PMC_SS_RestrictStatusChangeAfterApproved</fullName>
        <active>true</active>
        <description>Restrict the Sales Agreement to move it from Approved to Draft.</description>
        <errorConditionFormula>AND(
NOT($Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c) ,
ISCHANGED( Status ),
ISPICKVAL(PRIORVALUE(Status),&quot;Approved&quot;),
(ISPICKVAL( Status , &apos;Draft&apos;) || ISPICKVAL( Status , &apos;Archived&apos;))
)</errorConditionFormula>
        <errorMessage>Sales Agreement can’t be moved from Approved to other stage. Please amend the Sales Agreement to make any changes.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PMC_SS_RestrictStatusJustPendingWithCust</fullName>
        <active>true</active>
        <description>This validation rule ensures that Sales agreement status cannot be manually changed to Pending with Customer.</description>
        <errorConditionFormula>AND(
NOT($Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c),
ISPICKVAL( Status , &apos;Pending with Customer&apos;),
NOT(ISPICKVAL( PMC_SS_ApprovalStatus__c , &apos;Approved&apos;))
)</errorConditionFormula>
        <errorMessage>Sales Agreement must be approved internally prior to sending to customer, therefore this SA cannot be created/updated with the status of &quot;Pending with Customer&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PMC_SS_RestrictStatusPendingCustToDraft</fullName>
        <active>true</active>
        <description>This validation rule ensures that Sales agreement status cannot be moved from Pending with Customer to Draft or Approved.</description>
        <errorConditionFormula>AND(
NOT($Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c),
ISCHANGED( Status ),
ISPICKVAL(PRIORVALUE(Status),&apos;Pending with Customer&apos;),
OR(
ISPICKVAL( Status , &apos;Draft&apos;),
ISPICKVAL( Status , &apos;Archived&apos;)
)
)</errorConditionFormula>
        <errorMessage>This agreement has already been approved, therefore it cannot be moved to Draft or Archived. Please amend the new Sales Agreement if modifications are needed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PMC_SS_RestrictStatusPendingWithCustomer</fullName>
        <active>false</active>
        <description>This validation rule ensures that Sales agreement status cannot be manually changed to Pending with Customer. Also, status cannot be moved from Pending with Customer to Draft or Approved.</description>
        <errorConditionFormula>AND(
NOT($Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c) ,
OR(

AND(
 ISPICKVAL( Status , &apos;Pending with Customer&apos;),
 NOT(ISPICKVAL(  PMC_SS_ApprovalStatus__c  , &apos;Approved&apos;)) 
),

AND(
ISCHANGED( Status ),
ISPICKVAL(PRIORVALUE(Status),&apos;Pending with Customer&apos;),
OR(
ISPICKVAL( Status , &apos;Draft&apos;),
ISPICKVAL( Status , &apos;Archived&apos;)
)
)

)

)</errorConditionFormula>
        <errorMessage>Sales Agreement can&apos;t be created with &apos;Pending with Customer&apos; status or manually updated to/from &apos;Pending with Customer&apos; status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SP10ValidationRule</fullName>
        <active>false</active>
        <description>Test</description>
        <errorConditionFormula>ISCHANGED(Status) &amp;&amp; ISPICKVAL( Status, &apos;Activated&apos;)</errorConditionFormula>
        <errorMessage>Error Message Test</errorMessage>
    </validationRules>
</CustomObject>